handling screen rotation

--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -28,6 +28,7 @@
         android:textSize="24sp"
         android:textColor="#000"
         android:padding="5dp"
-        android:gravity="top"/>
+        android:gravity="top"
+        android:imeOptions="flagNoExtractUi"/>
 
 </LinearLayout>
