--- a/app/src/main/res/layout/layout_note_toolbar.xml
+++ b/app/src/main/res/layout/layout_note_toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:weightSum="100"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorPrimary"
     android:gravity="center_vertical">
 
     <RelativeLayout
@@ -19,8 +19,7 @@
             android:src="@drawable/ic_arrow_back_black_24dp"
             android:background="?attr/selectableItemBackground"
             android:id="@+id/toolbar_back_arrow"
-            android:layout_centerInParent="true"
-            />
+            android:layout_centerInParent="true" />
 
     </RelativeLayout>
 
